--- a/project/package.json
+++ b/project/package.json
@@ -9,10 +9,13 @@
         "@tailwindcss/forms": "^0.5.7",
         "@tailwindcss/typography": "^0.5.10",
         "autoprefixer": "^10.4.16",
-        "axios": "^1.6.4",
+        "axios": "^1.6.8",
         "laravel-vite-plugin": "^1.0",
         "postcss": "^8.4.32",
         "tailwindcss": "^3.4.0",
         "vite": "^5.0"
+    },
+    "dependencies": {
+        "react-router-dom": "^6.23.0"
     }
 }
