--- a/project/package.json
+++ b/project/package.json
@@ -12,10 +12,8 @@
         "axios": "^1.6.8",
         "laravel-vite-plugin": "^1.0",
         "postcss": "^8.4.32",
+        "react-router-dom": "^6.23.0",
         "tailwindcss": "^3.4.0",
         "vite": "^5.0"
-    },
-    "dependencies": {
-        "react-router-dom": "^6.23.0"
     }
 }
